--- a/rocap_ros/package.xml
+++ b/rocap_ros/package.xml
@@ -31,7 +31,7 @@
   <exec_depend>ament_index_python</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>control_msgs</exec_depend>
-  <exec_depend>cta_gazebo_part</exec_depend>
+  <!-- <exec_depend>cta_gazebo_part</exec_depend> -->
   <exec_depend>diff_drive_controller</exec_depend>
   <exec_depend>effort_controllers</exec_depend>
   <exec_depend>gazebo_ros2_control</exec_depend>
